为 5 个分类 200 道题增加苏格拉底式面试追问（至少 5 层递进）
- ant-risk/pdd-ai/pdd-content/pdd-scm/pdd-trade 各 40 题
- 每题追加至少 5 层递进追问：目标动机→证据定位→根因深挖→方案权衡→验证沉淀
- 追问回答全部题目专属（具体命令/指标/参数），非通用话术
- 构建通过